Loose .css file in root folder
Moved normalize.css to styles folder

--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -6,7 +6,7 @@
     <title>Blog Week 1</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Blog week 1 about Setting GitHub and the reading As We May Think">
-    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="blog.css">
 
