--- a/Blogs/blog_week_11.html
+++ b/Blogs/blog_week_11.html
@@ -6,7 +6,7 @@
         <title>Blog Week 11</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Blog week 11 looking at Christoph Lutz, Digital Inequalities in the Age of Artificial Intelligence and Big Data (2019)">
-        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
 
