--- a/Blogs/blog_week_12.html
+++ b/Blogs/blog_week_12.html
@@ -6,7 +6,7 @@
         <title>Blog Week 12</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Blog week 7 looking at Digital Coloniality, specifically how code matters in the context of decolonialism and just things one should be aware of in coding practices">
-        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
 
