--- a/Blogs/blog_week_13.html
+++ b/Blogs/blog_week_13.html
@@ -6,7 +6,7 @@
         <title>Blog Week 13</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Blog week 13 looking at ethical internet, more specifically Orgad - The internet as a moral space the legacy of Roger Silverstone - 2007">
-        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
 
