--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -6,7 +6,7 @@
     <title>Blog Week 4</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Blog week 4 about beginning the design section and reflection so far">
-    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="blog.css">
 
