--- a/Blogs/blog_week_6.html
+++ b/Blogs/blog_week_6.html
@@ -6,7 +6,7 @@
     <title>Week 6</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Week 6 Designs Style Guide more in depth">
-    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="blog.css">
 
