--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -6,7 +6,7 @@
         <title>Blog Week 7</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Blog week 7 looking at some examples for Essay 1: UX & UI Analysis">
-        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
 
