--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -6,11 +6,12 @@
     <title>Essays</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Essays for the module">
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="essay.css">
 
     <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
-    <link rel="stylesheet" href="../normalize.css"/>
+    
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
