--- a/Essays/essay_1.html
+++ b/Essays/essay_1.html
@@ -6,7 +6,7 @@
     <title>Essay UI UX</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Essay 1: UX/UI Analysis on the South African Website Dischem">
-    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="essay.css">
 
