--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -6,7 +6,7 @@
     <title>Profile</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Profile containing information about me and contact information">
-    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="profile.css">
 
