--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Home page for the website">
 
     <link rel="icon" href="Images/profile_avatar.png" type="image/x-icon">
-    <link rel="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="/Styles/normalize.css"/>
     <link rel="stylesheet" href="Styles/main.css"/>
     <link rel="stylesheet" href="index.css"/>
 
