--- a/Blogs/blog_week_10.html
+++ b/Blogs/blog_week_10.html
@@ -6,7 +6,7 @@
         <title>Blog Week 10</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Blog week 10 looking at the reading Greenstein et al. - 2018 - How Geography Shapes-and Is Shaped by-the Internet">
-        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
 
