--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -6,7 +6,7 @@
     <title>Blog Week 3</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Blog week 3 about Interaction Design and a web-style guide">
-    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="blog.css">
 
