--- a/Blogs/blog_week_5.html
+++ b/Blogs/blog_week_5.html
@@ -6,7 +6,7 @@
     <title>Week 5</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Design Process and Documentation of IxD Process">
-    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="blog.css">
 
