--- a/Blogs/blog_week_9.html
+++ b/Blogs/blog_week_9.html
@@ -6,7 +6,7 @@
         <title>Blog Week 9</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Blog week 9 looking at Internet, Society and Design Justice">
-        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
 
