--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="designs.css">
 
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
-        <link rel="stylesheet" href="../normalize.css"/>
+        <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
     
         <link rel="preconnect" href="https://fonts.googleapis.com">
