--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -86,47 +86,53 @@
                         <!--Image of colour swatches-->
                         <p>
                             <p>
-                            Box shadow effect inside the containers: rgba(0, 255, 255, 0.3)
                             <figure> 
+                                <figcaption>Box shadow effect inside the containers: rgba(0, 255, 255, 0.3)</figcaption>
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_1.png" alt="colour swatch for box shadow effect rgba(0, 255, 255, 0.3)">
                             </figure>
                             </p>
                             <p>
-                            Hover over text and normal text: aliceblue
                             <figure> 
+                                <figcaption>Hover over text and normal text: aliceblue</figcaption> 
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_2.png" alt="colour swatches for hover over aliceblue">
                             </figure>
                             </p>
                             <p>
-                            Container border: #00156a
-                            <figure> 
+                            <figure>
+                                <figcaption>Container border: #00156a</figcaption> 
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_3.png" alt="colour swatches for the border #00156a">
                             </figure>
                             </p>
                             <p>
                             Background: linear-gradient(-45deg, #00001b, #0a0049, #00156a, #000d5d);
-                            <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_4.png" alt="colour swatches linear-gradient(-45deg, #00001b, #0a0049, #00156a, #000d5d);">
+                            <figure>
+                                <figcaption>Part of the background gradient, colour #00001b</figcaption> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_4.png" alt="colour swatches  part of the background gradient, colour #00001b">
                             </figure>
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_5.png" alt="colour swatches">
+                                <figcaption>Part of the background gradient, colour #0a0049</figcaption>
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_5.png" alt="colour swatches part of the background gradient, colour #0a0049">
                             </figure>
-                            <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_6.png" alt="colour swatches">
+                            <figure>
+                                <figcaption>Part of the background gradient, colour #00156a</figcaption> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_6.png" alt="colour swatches part of the background gradient, colour #00156a">
                             </figure>
-                            <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_7.png" alt="colour swatches">
+                            <figure>
+                                <figcaption>Part of the background gradient, colour #000d5d</figcaption> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_7.png" alt="colour swatches part of the background gradient, colour #000d5d">
                             </figure>
                             </p>
                             <p>
                             Navigation: box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
                             <figure> 
+                                 <figcaption>Part of the box shadow, colour swatch #001dff and #001dff inset</figcaption>
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_8.png" alt="colour swatch Navigation: box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;">
                             </figure>
                             </p>
                             <p>
                             border-top: 1px solid #00f6ff;
                             <figure> 
+                                 <figcaption> Colour swatch #00f6ff</figcaption>
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_9.png" alt=" border-top: 1px solid #00f6ff;">
                             </figure>
                             </p>
@@ -140,18 +146,21 @@
                         <p>
                             This is the font sample for the Headings:
                             <figure> 
+                                <figcaption>Font: Orbitron</figcaption> 
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/font_h1.png" alt="font sample image, font orbitron">
                             </figure>
                         </p>
                         <p>
                             Font sample for any text that need to be highlighted like logo
                             <figure> 
+                                <figcaption>Font: Audiowide</figcaption>
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/font_highlight.png" alt="font sample image, font audiowide">
                             </figure>
                         </p>
                         <p>
                             Font sample for normal paragraph text:
-                            <figure> 
+                            <figure>
+                                 <figcaption>Font: Share Tech Mono</figcaption> 
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/font_normal.png" alt="font sample image, font share tech mono">
                             </figure>
                         </p>    
@@ -161,6 +170,7 @@
                     <p>
                         Final design Sketches:
                         <figure> 
+                            <figcaption>Final design sketch, high fidelity wireframe</figcaption>
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches, home page with avatar of me on left hand side, and ladning page text to the right of image">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches, blog main page with blog cards in a flex box">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches, blog page with blog entry. Blog text in the middle of the page">
@@ -174,7 +184,8 @@
 
                     <p>
                         <h3>Final design Sketches with JS implementation:</h3>
-                        <figure> 
+                        <figure>
+                            <figcaption>JS interaction points</figcaption> 
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1js.png" alt="Wireframe final design sketches, home page with avatar of me on left hand side, and ladning page text to the right of image">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2js.png" alt="Wireframe final design sketches, blog main page with blog cards in a flex box">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3js.png" alt="Wireframe final design sketches, blog page with blog entry. Blog text in the middle of the page">
@@ -209,7 +220,8 @@
                 </p>
                 <p>
                     <!--Wireframe images-->
-                    <figure> 
+                    <figure>
+                        <figcaption>Annotated medium fidelity wireframe</figcaption> 
                         <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches, brainstorming various layouts of homepage">
                         <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches, brainstorming essays page and essay entry">
                         <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches, brainstorming porfolio cards layout and profile layout">
