--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -49,7 +49,8 @@
                     </p>
                     <p>
                         Design interaction sketches:
-                        <figure> 
+                        <figure>
+                            <figcaption>Medium fidelity wireframes with annotated interaction points</figcaption> 
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches, brainstorming various layouts of homepage">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches, brainstorming essays page and essay entry">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches, brainstorming porfolio cards layout and profile layout">
@@ -60,7 +61,8 @@
 
                     <p>
                         Final design Sketches:
-                        <figure> 
+                        <figure>
+                            <figcaption>High fidelity wireframes</figcaption> 
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches, home page with avatar of me on left hand side, and ladning page text to the right of image">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches , blog main page with blog cards in a flex box">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches, blog page with blog entry. Blog text in the middle of the page">
@@ -75,6 +77,7 @@
                     <p>
                         <h3>Final design Sketches with JS implementation:</h3>
                         <figure> 
+                            <figcaption>Medium fidelity wireframes with annotated JS interaction points</figcaption>
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1js.png" alt="Wireframe final design sketches, home page with avatar of me on left hand side, and ladning page text to the right of image">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2js.png" alt="Wireframe final design sketches , blog main page with blog cards in a flex box">
                             <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3js.png" alt="Wireframe final design sketches, blog page with blog entry. Blog text in the middle of the page">
