--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -65,6 +65,7 @@
                                     This definitley tailors the experience to allow for a personalized shopping experience for the users.
                                     <!--Screenshot image-->
                                     <figure> 
+                                        <figcaption>Screenshot of extensive menu </figcaption>
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_pro1.png" alt="Screenshot of an exntensive menu category in the nav bar. Easy to navigate for users">
                                     </figure>
                                 </p>
@@ -81,6 +82,7 @@
                                     This results in a disorientated user since they face a frustrating layout.
                                     Some of the images cuts out the text above slightly, also adding to a more challenging to read user interface.
                                     <figure> 
+                                        <figcaption>The following are screenshots of inconsistent UI</figcaption>
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con1.png" alt="Screenshot of bad UI. Large advert image of easter specials under each other leaving white space to the sides">
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con2.png" alt="Screenshot of bad UI. Advert images of easter specials with two next to each other and one below in the middle. Not very harmonious layout">
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con3.png" alt="Screenshot of bad UI. Block-cards showcasing products and each product image is a different size. As a result the 'shop now' button is on different levels on each block-card. Not easy for user to navigate">
@@ -99,7 +101,8 @@
                                     Buying a ticket is relatively easy and intuitive.
                                     The Home Page/Landing page has a structured layout that allows users to see the event and a little excerpt.
                                     <!--Screenshot image-->
-                                    <figure> 
+                                    <figure>
+                                        <figcaption>Screenshot of coherent homepage: </figcaption> 
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_pro1.png" alt="Screenshot of coherent homepage. Carousel of events well laid out and spaced. ">
                                     </figure>
 
@@ -115,6 +118,7 @@
                                     While this is combined with images sometime sitting on other components as well.
                                     <!--Screenshot images-->
                                     <figure> 
+                                        <figcaption>Screenshot of inconsistent UI</figcaption>
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con1.png" alt="Screenshot of bad UI. The search bar is in the middle, but the events all line to the side of the screen leaving 3/4 of the screnn in white space">
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con2.png" alt="Screenshot of bad UI. The image under the search bar overlapping onto the event block-card">
                                         <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con3.png" alt="Screenshot of bad UI. Showcasing how events are left to the side taking up a 1/4 of the screen only">
