--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -11,7 +11,8 @@
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
         <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
-    
+        <script src="../Scripts/main.js"></script>
+        <script src="designs.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
@@ -113,8 +114,7 @@
                     <button id="prevBtn">←</button>
                     <button id="nextBtn">→</button>
                 </div>
-            <script src="../Scripts/main.js"></script>
-            <script src="designs.js"></script>
+            
 
         <footer>
             <p class="footer">
