--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -11,7 +11,8 @@
     <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
     <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
-
+    <script src="../Scripts/main.js" defer></script>
+    <script src="portfolio.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
@@ -221,8 +222,7 @@
 
         <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
         <button id="toTopBtn" title="Back to Top"><i class="fa-solid fa-arrow-up"></i></button>
-        <script src="../Scripts/main.js"></script>
-        <script src="portfolio.js"></script>
+        
         
         <footer>
             <p class="footer">
