--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="/Styles/normalize.css"/>
     <link rel="stylesheet" href="Styles/main.css"/>
     <link rel="stylesheet" href="index.css"/>
+    <script src="../Scripts/main.js"></script>
+    <script src="index.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,8 +65,7 @@
         </main>
 
         <button id="toTopBtn" title="Back to Top"><i class="fa-solid fa-arrow-up"></i></button>
-        <script src="../Scripts/main.js"></script>
-        <script src="index.js"></script>
+        
 
         <footer>
             <p class="footer">
