--- a/Blogs/blog_week_13.html
+++ b/Blogs/blog_week_13.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="../Styles/normalize.css"/>
         <link rel="stylesheet" href="../Styles/main.css"/>
         <link rel="stylesheet" href="blog.css">
-
+        <script src="../Scripts/main.js"></script>
+        <script src="blog.js" defer></script>
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -183,8 +184,7 @@
                     <button id="prevBtn">←</button>
                     <button id="nextBtn">→</button>
                 </div>
-            <script src="../Scripts/main.js"></script>
-            <script src="blog.js"></script>
+            
 
             <footer>
                 <p class="footer">
