--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="profile.css">
+    <script src="profile.js" defer></script>
 
     <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
     
@@ -144,6 +145,6 @@
     </body>
 
     <div id="scanner-beam"></div>
-    <script src="profile.js"></script>
+    
 
 </html>
