--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -163,6 +163,17 @@
                 </p>
             </div>
 
+            <div class="blog-card">
+            <h2 class="p-name">Approaching Justice and Ethics in Artistic and Programming Practices</h2>
+                <h3></h3>
+                <p class="p-summary">
+                    Ethical Internet. An ethical internet means using the internet in a way that is fair, respectful, 
+                    and responsible. It’s about making sure that people, companies, and governments behave in ways 
+                    that protect everyone’s rights and treat...<br>
+                    <a href="blog_week_14.html" class="view-more readmore-btn">Read More...</a>
+                </p>
+            </div>
+
             </div>
             </article>
 
@@ -179,9 +190,10 @@
                     <li><a href="blog_week_7.html">7</a></li>
                     <li><a href="blog_week_9.html">8</a></li> <!--We didn't have a week 8 blog post-->
                     <li><a href="blog_week_10.html">9</a></li>
-                    <li><a href="blog_week_11.html">12</a></li>
-                    <li><a href="blog_week_12.html">13</a></li>
-                    <li><a href="blog_week_13.html">14</a></li>
+                    <li><a href="blog_week_11.html">10</a></li>
+                    <li><a href="blog_week_12.html">11</a></li>
+                    <li><a href="blog_week_13.html">12</a></li>
+                    <li><a href="blog_week_14.html">13</a></li>
                     </ul>
                 </nav>
             </section>
