Created html page for reflection
Created the html page, added it to the essays main page, and the js previous and next button

--- a/Essays/essay_2.html
+++ b/Essays/essay_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essays</title>
     <meta name="author" content="Amina Moosa">
-    <meta name="description" content="Essay 2 coming soon">
+    <meta name="description" content="Essay 2 on The Internet, Geopolitics, and Digital Coloniality">
     <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="essay.css">
