--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -55,10 +55,23 @@
             </div>
             
             <div class="blog-card">
-            <h2 class="p-name">Essay 2</h2>
+            <h2 class="p-name">Essay 2: The Internet, Geopolitics, and Digital Coloniality</h2>
                     <p class="p-summary">
-                        Coming soon! Stay Tuned!<br>
+                        The internet, largely considered a space that does not have physical boundaries, is
+                        nonetheless shaped by distinct geographies that can often mirror or even reinforce global
+                        inequalities in power, representation, and access<cite>(Graham, 2014)</cite>. From this arises digital
+                        coloniality, which describes how Western tech corporations show colonial patterns of control
+                        and extraction into...<br>
                         <a href="essay_2.html" class="view-more readmore-btn">Read More...</a> <br>
+                    </p>
+            </div>
+
+            <div class="blog-card">
+            <h2 class="p-name">Final Reflection on the Implementation of the Website</h2>
+                    <p class="p-summary">
+                        A brief description on the UI and UX impact on my code. Reflection incldues
+                        looking at folder structure, semantic markup, metadata, css and js<br>
+                        <a href="essay_3_reflection.html" class="view-more readmore-btn">Read More...</a> <br>
                     </p>
             </div>
 
@@ -71,6 +84,7 @@
                     <li><a class="active">Essays</a></li>
                     <li><a href="essay_1.html">1</a></li>
                     <li><a href="essay_2.html">2</a></li>
+                    <li><a href="essay_3_reflection.html">3</a></li>
                     </ul>
                 </nav>
             </section>
