--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -167,9 +167,9 @@
             <h2 class="p-name">Approaching Justice and Ethics in Artistic and Programming Practices</h2>
                 <h3></h3>
                 <p class="p-summary">
-                    Ethical Internet. An ethical internet means using the internet in a way that is fair, respectful, 
-                    and responsible. It’s about making sure that people, companies, and governments behave in ways 
-                    that protect everyone’s rights and treat...<br>
+                    One of the key ways I believe this could be achieved is by game designers intentionally including values. 
+                    Game designers should explicitly include values like inclusion and privacy in their design instead of 
+                    letting these values be embedded by chance <cite>(Flanagan et al., 2007)</cite>....<br>
                     <a href="blog_week_14.html" class="view-more readmore-btn">Read More...</a>
                 </p>
             </div>
