--- a/Blogs/blog_week_6.html
+++ b/Blogs/blog_week_6.html
@@ -28,8 +28,8 @@
                 <label for="check" class="burger-button"><i class="fa-solid fa-bars"></i></label>
                 <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../Blogs/blog.html">Blogs</a> </li>
-                <li><a class="active" href="designs.html">Designs</a></li>
+                <li><a class="active" href="../Blogs/blog.html">Blogs</a> </li>
+                <li><a href="../Designs/designs.html">Designs</a></li>
                 <li><a href="../Essays/essay.html">Essays</a></li> 
                 <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
                 <li><a href="../Profile/profile.html">Profile</a></li>
