Hardcoded CSS removed
Hardcoded CSS removed from .js files

--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -6,11 +6,11 @@
     <title>Week 5</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Design Process and Documentation of IxD Process">
-
+    <link rel="stylesheet" href="designs.css"/>
     <link rel="icon" href="../Images/profile_avatar_2.png" type="image/x-icon">
     <link rel="stylesheet" href="../Styles/normalize.css"/>
     <link rel="stylesheet" href="../Styles/main.css"/>
-    <link rel="stylesheet" href="designs.css"/>
+    
     <script src="../Scripts/main.js"></script>
     <script src="designs.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
         <main>
             <div class="group-container"> </div> 
             <article class="h-entry">
-                <div class="e-content container-wrapper">
+                <div class="e-content group-container-wrapper">
                 <h2 class="p-name">Documentation of IxD Process</h2>
                     <p>
                         <h3 class="p-name">Goal Alignment</h3>
@@ -72,7 +72,7 @@
 
                         <figure>
                             <figcaption>Infomation content and how folders are structured</figcaption>
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_5/blog_5_information_content.png" alt="Information content and how folders are structured">
+                            <img class="u-photo img-design" src="../Images/Designs/Week_5/blog_5_information_content.png" alt="Information content and how folders are structured">
                         </figure>
 
                         <figure>
