--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -40,7 +40,7 @@
         <main>
             <div class="group-container">
             <article class="h-entry">
-                <div class="e-content container-wrapper">
+                <div class="e-content group-container-wrapper">
                 <h1 class="p-name">Research for Design Section</h1>
 
                 <h2 class="p-name">Style Guides</h2>
